@@ -2795,7 +2795,6 @@ log_working_directory (entering)
      int entering;
 {
   static int entered = 0;
-  char *msg = entering ? _("Entering") : _("Leaving");
 
   /* Print nothing without the flag.  Don't print the entering message
      again if we already have.  Don't print the leaving message if we
@@ -2809,12 +2808,20 @@ log_working_directory (entering)
     fputs ("# ", stdout);
 
   if (makelevel == 0)
-    printf ("%s: %s ", program, msg);
+    printf ("%s: ", program);
   else
-    printf ("%s[%u]: %s ", program, makelevel, msg);
+    printf ("%s[%u]: ", program, makelevel);
+
+  /* Use entire sentences to give the translators a fighting chance.  */
 
   if (starting_directory == 0)
-    puts (_("an unknown directory"));
+    if (entering)
+      puts (_("Entering an unknown directory"));
+    else
+      puts (_("Leaving an unknown directory"));
   else
-    printf (_("directory `%s'\n"), starting_directory);
+    if (entering)
+      printf (_("Entering directory `%s'\n"), starting_directory);
+    else
+      printf (_("Leaving directory `%s'\n"), starting_directory);
 }
